cluster-cd/apps/base/home/zwave2mqttjs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zwave
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - &host zwave.${SECRET_DOMAIN}
      secretName: zwave-tls
  rules:
    - host: *host
      http:
        paths:
          - backend:
              serviceName: zwave
              servicePort: http
